// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Snapshot Tests renders a basic Switch checked 1`] = `
<div>
  <span
    class="ms-Switch-root checked"
    id="switch-1"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(100%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        checked=""
        class=""
        type="checkbox"
      />
    </div>
  </span>
</div>
`;

exports[`Switch Snapshot Tests renders a basic Switch unchecked 1`] = `
<div>
  <span
    class="ms-Switch-root"
    id="switch-1"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(0%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        class=""
        type="checkbox"
      />
    </div>
  </span>
</div>
`;

exports[`Switch Snapshot Tests renders a disabled Switch checked 1`] = `
<div>
  <span
    class="ms-Switch-root checked"
    id="switch-1"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(100%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        checked=""
        class=""
        type="checkbox"
      />
    </div>
  </span>
</div>
`;

exports[`Switch Snapshot Tests renders a disabled Switch unchecked 1`] = `
<div>
  <span
    class="ms-Switch-root"
    id="switch-1"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(0%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        class=""
        type="checkbox"
      />
    </div>
  </span>
</div>
`;

exports[`Switch Snapshot Tests renders a disabled labeled Switch 1`] = `
<div>
  <span
    class="ms-Switch-root"
    id="switch-1"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(0%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        class=""
        disabled=""
        type="checkbox"
      />
    </div>
  </span>
</div>
`;

exports[`Switch Snapshot Tests renders a labeled Switch 1`] = `
<div>
  <span
    class="ms-Switch-root"
    id="switch-1"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(0%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        class=""
        type="checkbox"
      />
    </div>
  </span>
</div>
`;
